ready for deployment

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="StockGuard - Inventory & Sales Tracking System"
+    />
+    <meta name="theme-color" content="#2563eb" />
     <title>StockGuard - Inventory & Sales Tracking System</title>
   </head>
   <body>
@@ -11,4 +18,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
